--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,14 +30,14 @@
 			<footer class="footer" role="contentinfo">
 
 				<nav class="footer_nav">
-					<a href="index.html">Home</a> -
-					<a href="string_thing.html">String Thing</a> - 
-					<a href="sing_thing.html">Sing Thing</a> -
-					<a href="doodlebook/index.html">Doodlebook</a> -		
-					<a href="mail_art.html">Mail Art</a> -
-					<a href="phone_art.html">Phone Art</a> -
-					<a href="artists.html">Artists</a> -
-					<a href="contact.html">Contact Us</a>
+					<a href="/index.html">Home</a> -
+					<a href="/string_thing.html">String Thing</a> - 
+					<a href="/sing_thing.html">Sing Thing</a> -
+					<a href="/doodlebook/index.html">Doodlebook</a> -		
+					<a href="/mail_art.html">Mail Art</a> -
+					<a href="/phone_art.html">Phone Art</a> -
+					<a href="/artists.html">Artists</a> -
+					<a href="/contact.html">Contact Us</a>
 				</nav>
 
 
