--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,8 @@
-<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
-<title>{% if page.title %}{{ page.title }}{% else %}{{ site.title}}{% endif %}</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<title>{% if page.title %}{{ page.title }}{% else %}{{ site.title}}{% endif %}</title>
+<meta name="HandheldFriendly" content="True">
+<meta name="MobileOptimized" content="320">
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <meta name="description" content="{% if page.title %}{{ page.title }}{% endif %} - {{ site.description }}" />
 <meta name="keywords" content="wupadupa, wupadupa music, wupa dupa, wupa, dupa, martha tilston, cake, free cake, sugardrum, sDrum, music, acoustic music, melodic, mellow, poetry, lyrics, mp3, wav, acoustic songs, songs, plopnicks, Nigel Bunner" />
 <link href="http://fonts.googleapis.com/css?family=Denk+One" rel="stylesheet" type="text/css" />
