--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,5 +5,5 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <meta name="description" content="{% if page.title %}{{ page.title }}{% endif %} - {{ site.description }}" />
 <meta name="keywords" content="wupadupa, wupadupa music, wupa dupa, wupa, dupa, martha tilston, cake, free cake, sugardrum, sDrum, music, acoustic music, melodic, mellow, poetry, lyrics, mp3, wav, acoustic songs, songs, plopnicks, Nigel Bunner" />
-<link href="http://fonts.googleapis.com/css?family=Denk+One" rel="stylesheet" type="text/css" />
-<link rel="stylesheet" type="text/css" href="/css/wupadupa-styles-2011-03-09.css" /> 
+<link href="//fonts.googleapis.com/css?family=Denk+One" rel="stylesheet" type="text/css" />
+<link rel="stylesheet" type="text/css" href="/css/wupadupa-styles-2018-04-22.css" /> 
